Avoid layout shift due to display of latency result

--- a/src/components/proxies/ProxyLatency.module.scss
+++ b/src/components/proxies/ProxyLatency.module.scss
@@ -3,6 +3,6 @@
   color: #eee;
   font-size: 0.6em;
   @media (--breakpoint-not-small) {
-    font-size: 1em;
+    font-size: 0.85em;
   }
 }
